--- a/.env
+++ b/.env
@@ -1,7 +1,5 @@
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
-
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
 DATABASE_URL="mongodb+srv://vaibhav:tJFytD51kjsR8A2o@cluster0.jcsaz.mongodb.net/mytodosdb?retryWrites=true&w=majority"
+JWT_SECRET="r8988934hakjebaskdjfaskldjfbhaklser7hhhhd3"
+GOOGLE_CLIENT_ID="571322741267-es47lti32t8s3qbepgh8lvmcq4rd13ps.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET="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"
+GOOGLE_CLIENT_REDIRECT_URL="http://localhost:3000/api/auth/google/redirect"
